# sticky-throws

./: Cargo.toml  README.md
assets/shaders/: sticky.wgsl  tiling.wgsl
src/: game.rs  main.rs  physics.rs  splash.rs  throw.rs  utils.rs
src/game/: collision_test.rs  items.rs  physics.rs  shaders.rs  throw.rs
