[package]
name = "tricky-throws"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
bevy = "0.9.1"
wgpu = "0.14.2"
bevy_rapier2d = "0.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
union-find = "0.4.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
